Bug Fixes for Collapse Table

--- a/web/CSS/Admin/ViewOrder.css
+++ b/web/CSS/Admin/ViewOrder.css
@@ -82,3 +82,11 @@ table .collapse.in {
     width: 20%;
     text-align: center;
 }
+
+.header .sign:after{
+  content:"-";
+  display:inline-block;      
+}
+.header.expand .sign:after{
+  content:"+";
+ }
